--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.0.6",
+    "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
